--- a/04.manifests/02.web-server/01.configmap.yaml
+++ b/04.manifests/02.web-server/01.configmap.yaml
@@ -14,6 +14,6 @@ data:
           root /usr/share/nginx/html;
           index index.html;
         }
-        add_header X-Served-By $hostname;
+        add_header X-Served-By $hostname always;
       }
     }
