--- a/04.manifests/01.database/02.mysql-ss.yaml
+++ b/04.manifests/01.database/02.mysql-ss.yaml
@@ -9,10 +9,12 @@ spec:
   selector:
     matchLabels:
       app: mysql
+      project: ng-voice
   template:
     metadata:
       labels:
         app: mysql
+        project: ng-voice
     spec:
       containers:
       - name: mysql
