--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,34 @@
-# Terraform files
+# Terraform
+**/.terraform/*
 *.tfstate
 *.tfstate.*
-*.tfvars
-*.tfvars.json
-.terraform/
-.terraform.lock.hcl
+*.tfvars.backup
+*.tfplan
 crash.log
-crash.*.log
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-.terraformrc
-terraform.rc
+.terraform.lock.hcl
 
-# Kubernetes secrets and sensitive manifests
-*secret*.yaml
-*secret*.yml
-secrets/
-*.kubeconfig
-kubeconfig
-.kube/
+# Helm
+*.tgz
 
-# Kubernetes generated/temporary files
-*.tmp
-*.temp
-.manifests/
-generated-manifests/
-
-# Environment files
-.env
-.env.*
-*.pem
+# Kubernetes
+**/kubeconfig
 *.key
 *.crt
 
-# IDE and OS files
-.idea/
+# IDE
 .vscode/
+.idea/
 *.swp
 *.swo
 *~
 .DS_Store
-Thumbs.db
 
-
-# Go files
+# Go
 *.exe
-*.exe~
 *.dll
 *.so
 *.dylib
@@ -55,3 +36,19 @@ Thumbs.db
 *.out
 go.work
 vendor/
+
+# Secrets
+*secret*.yaml
+*credentials*.yaml
+*.pem
+
+# Backups
+*.bak
+*.backup
+
+# Logs
+*.log
+
+# Documentation
+**/README.md
+README-backup.md
