feat: update Helm chart to support dynamic node labeling for MySQL StatefulSet

--- a/helm-charts/ng-voice/templates/database-statefulset.yaml
+++ b/helm-charts/ng-voice/templates/database-statefulset.yaml
@@ -49,8 +49,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: db-node
+              {{- range $key, $value := .Values.mysql.nodeLabel }}
+              - key: {{ $key }}
                 operator: Exists
+              {{- end }}
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
