chore: update k3d config and readme

--- a/helm-charts/ng-voice/templates/database-statefulset.yaml
+++ b/helm-charts/ng-voice/templates/database-statefulset.yaml
@@ -49,6 +49,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
+            # TODO: Use the value of the label also
               {{- range $key, $value := .Values.mysql.nodeLabel }}
               - key: {{ $key }}
                 operator: Exists
