--- a/helm-charts/ng-voice/templates/database-networkpolicy.yaml
+++ b/helm-charts/ng-voice/templates/database-networkpolicy.yaml
@@ -17,6 +17,7 @@ spec:
           kubernetes.io/metadata.name: {{ .Values.networkPolicy.database.allowFrom.namespace }}
       podSelector:
         matchLabels:
+        # TODD: Make this dynamic
           access: {{ .Values.networkPolicy.database.allowFrom.podLabel }}
     
     ports:
