--- a/infrastructure/local/kind/cluster-config.yaml
+++ b/infrastructure/local/kind/cluster-config.yaml
@@ -4,27 +4,21 @@ name: ng-voice-cluster
 
 nodes:
 - role: control-plane
-  kubeadmConfigPatches:
-  - |
-    kind: InitConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-labels: "ingress-ready=true"
   extraPortMappings:
-  - containerPort: 80
-    hostPort: 8080
+  - containerPort: 30000
+    hostPort: 30000
     protocol: TCP
-  - containerPort: 443
-    hostPort: 8443
+  - containerPort: 30090
+    hostPort: 30090
     protocol: TCP
 
 - role: worker
   labels:
-    db-node: "true"
+    db-node: "node-1"
 
 - role: worker
   labels:
-    db-node: "true"
+    db-node: "node-2"
 
 networking:
   apiServerAddress: "127.0.0.1"
