--- a/kubernetes-manifests/database/backup-pvc.yaml
+++ b/kubernetes-manifests/database/backup-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-backup-pvc
+  name: mysql-backup
   namespace: database
 spec:
   accessModes:
