--- a/kubernetes-manifests/database/internal-backup-cronjob.yaml
+++ b/kubernetes-manifests/database/internal-backup-cronjob.yaml
@@ -43,4 +43,4 @@ spec:
           volumes:
           - name: backup-volume
             persistentVolumeClaim:
-              claimName: mysql-backup-pvc
+              claimName: mysql-backup
