--- a/kubernetes-manifests/database/mysql-ss.yaml
+++ b/kubernetes-manifests/database/mysql-ss.yaml
@@ -67,7 +67,7 @@ spec:
       name: data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: local-path
+      storageClassName: standard
       resources:
         requests:
           storage: 10Gi
