--- a/kubernetes-manifests/web-server/service.yaml
+++ b/kubernetes-manifests/web-server/service.yaml
@@ -9,5 +9,5 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30080
+    nodePort: 30090 # This should match the port opened in the KIND config
   type: NodePort
