--- a/applications/pod-monitor/Dockerfile
+++ b/applications/pod-monitor/Dockerfile
@@ -1,5 +1,37 @@
-FROM golang:1.22-alpine
+# Build stage
+FROM golang:1.22-alpine AS builder
+
 WORKDIR /app
+
+# Copy go mod files first for better caching
+COPY go.mod go.sum ./
+RUN go mod download
+
+# Copy source code
 COPY . .
-RUN go build -o watcher
+
+# Build with optimizations
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags="-w -s" -o watcher .
+
+# Final stage
+FROM alpine:latest
+
+# Add ca-certificates for HTTPS connections
+RUN apk --no-cache add ca-certificates
+
+WORKDIR /app
+
+# Create non-root user
+RUN addgroup -g 1000 appgroup && \
+    adduser -D -u 1000 -G appgroup appuser
+
+# Copy only the binary from builder
+COPY --from=builder /app/watcher .
+
+# Change ownership
+RUN chown -R appuser:appgroup /app
+
+# Use non-root user
+USER appuser
+
 CMD ["./watcher"]
