--- a/helm-charts/ng-voice/crds/multus-crd.yaml
+++ b/helm-charts/ng-voice/crds/multus-crd.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.secondaryNetwork.enabled }}
 # Note:
 #   This deployment file is designed for 'quickstart' of multus, easy installation to test it,
 #   hence this deployment yaml does not care about following things intentionally.
@@ -12,6 +11,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: network-attachment-definitions.k8s.cni.cncf.io
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
 spec:
   group: k8s.cni.cncf.io
   scope: Namespaced
@@ -235,4 +237,3 @@ spec:
             items:
             - key: cni-conf.json
               path: 70-multus.conf
-{{- end }}
