--- a/helm-charts/ng-voice/templates/pod-watcher.yaml
+++ b/helm-charts/ng-voice/templates/pod-watcher.yaml
@@ -1,13 +1,17 @@
+{{- if .Values.podWatcher.enabled }}
+{{- if .Values.podWatcher.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: pod-watcher
-  namespace: default
+  name: {{ .Values.podWatcher.serviceAccount.name }}
+  namespace: {{ .Values.podWatcher.namespace }}
+{{- end }}
 ---
+{{- if .Values.podWatcher.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: pod-watcher
+  name: {{ .Values.podWatcher.rbac.clusterRole.name }}
 rules:
 - apiGroups: [""]
   resources: ["pods"]
@@ -16,40 +20,42 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: pod-watcher
+  name: {{ .Values.podWatcher.rbac.clusterRoleBinding.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: pod-watcher
+  name: {{ .Values.podWatcher.rbac.clusterRole.name }}
 subjects:
 - kind: ServiceAccount
-  name: pod-watcher
-  namespace: default
+  name: {{ .Values.podWatcher.serviceAccount.name }}
+  namespace: {{ .Values.podWatcher.namespace }}
+{{- end }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pod-watcher
-  namespace: default
+  name: {{ .Values.podWatcher.name }}
+  namespace: {{ .Values.podWatcher.namespace }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.podWatcher.replicas }}
   selector:
     matchLabels:
-      app: pod-watcher
+      app: {{ .Values.podWatcher.name }}
   template:
     metadata:
       labels:
-        app: pod-watcher
+        app: {{ .Values.podWatcher.name }}
     spec:
-      serviceAccountName: pod-watcher
+      serviceAccountName: {{ .Values.podWatcher.serviceAccount.name }}
       containers:
       - name: controller
-        image: farhaanshamsee/pod-watcher:v1.0
-        imagePullPolicy: IfNotPresent
+        image: {{ .Values.podWatcher.image.repository }}:{{ .Values.podWatcher.image.tag }}
+        imagePullPolicy: {{ .Values.podWatcher.image.pullPolicy }}
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "50m"
+            memory: {{ .Values.podWatcher.resources.requests.memory | quote }}
+            cpu: {{ .Values.podWatcher.resources.requests.cpu | quote }}
           limits:
-            memory: "128Mi"
-            cpu: "100m"
+            memory: {{ .Values.podWatcher.resources.limits.memory | quote }}
+            cpu: {{ .Values.podWatcher.resources.limits.cpu | quote }}
+{{- end }}
