--- a/kubernetes-manifests/database/s3-backup.yaml
+++ b/kubernetes-manifests/database/s3-backup.yaml
@@ -50,4 +50,4 @@ spec:
           volumes:
           - name: backup-volume
             persistentVolumeClaim:
-              claimName: mysql-backup-pvc
+              claimName: mysql-backup
