feat: add db cluster from bitnami

--- a/helm-charts/ng-voice/Chart.yaml
+++ b/helm-charts/ng-voice/Chart.yaml
@@ -11,3 +11,8 @@ keywords:
   - database
 maintainers:
   - name: Farhaan Shamsee
+dependencies:
+  - name: mysql
+    version: 14.0.3
+    repository: https://charts.bitnami.com/bitnami
+
