--- a/helm-charts/ng-voice/templates/database-backup-pvc.yaml
+++ b/helm-charts/ng-voice/templates/database-backup-pvc.yaml
@@ -1,14 +1,14 @@
-{{- if and .Values.mysql.enabled .Values.mysql.backup.enabled }}
+{{- if .Values.backup.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.mysql.backup.pvc.name }}
+  name: {{ .Values.backup.pvc.name }}
   namespace: {{ .Values.namespaces.database }}
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.mysql.backup.pvc.size }}
-  storageClassName: {{ .Values.mysql.backup.pvc.storageClass }}
+      storage: {{ .Values.backup.pvc.size }}
+  storageClassName: {{ .Values.backup.pvc.storageClass }}
 {{- end }}
