--- a/helm-charts/ng-voice/templates/database-secret.yaml
+++ b/helm-charts/ng-voice/templates/database-secret.yaml
@@ -1,10 +1,13 @@
-{{- if .Values.mysql.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.mysql.secret.name }}
+  name: {{ .Values.mysql.auth.existingSecret }}
   namespace: {{ .Values.namespaces.database }}
 type: Opaque
 data:
-  password: {{ .Values.mysql.secret.password }}
-{{- end }}
+  # Root password (base64 encoded 'mysql_password')
+  mysql-root-password: bXlzcWxfcGFzc3dvcmQ=
+  # Replication password (base64 encoded 'replication_password')  
+  mysql-replication-password: cmVwbGljYXRpb25fcGFzc3dvcmQ=
+  # Optional user password
+  mysql-password: bXlzcWxfcGFzc3dvcmQ=
